# booksource_filter

./: .gitignore  LICENSE  README.md  app.spec  pyproject.toml
.github/hooks/: commit-msg
.github/workflows/: release.yaml  release_notes.yaml
src/app/: classifier.py  configs.py  file_manager.py  main.py  models.py  pipeline.py  url_checker.py
